--- a/index.html
+++ b/index.html
@@ -1,1 +1,301 @@
-I
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Expense Tracker - Role Selection</title>
+  <style>
+    /* CSS Variables - Color Palette */
+    :root {
+      --color-1: #383858;
+      --color-2: #5E42DF;
+      --color-3: #CD2B62;
+      --color-4: #721C50;
+      --color-5: #9077FF;
+      --color-6: #A76496;
+
+      --shade-1: #25253b;
+      --shade-2: #341ca5;
+      --shade-3: #891d41;
+      --shade-4: #26091b;
+      --shade-5: #5d39ff;
+      --shade-6: #724065;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', sans-serif;
+      background: linear-gradient(135deg, var(--shade-1) 0%, var(--color-1) 50%, var(--shade-4) 100%);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #e8e8f0;
+      overflow: hidden;
+      animation: fadeIn 0.8s ease-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    /* Main Container */
+    .container {
+      max-width: 900px;
+      width: 90%;
+      text-align: center;
+      padding: 2rem;
+    }
+
+    /* Header Section */
+    .header {
+      margin-bottom: 4rem;
+      animation: slideDown 0.8s ease-out;
+    }
+
+    @keyframes slideDown {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .product-name {
+      font-size: 2.5rem;
+      font-weight: 500;
+      letter-spacing: -0.5px;
+      margin-bottom: 1rem;
+      color: #f5f5fa;
+    }
+
+    .tagline {
+      font-size: 1.1rem;
+      font-weight: 400;
+      color: #b8b8cc;
+      line-height: 1.6;
+    }
+
+    /* Role Selection Cards */
+    .role-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+      margin-bottom: 3rem;
+    }
+
+    .role-card {
+      background: linear-gradient(145deg, rgba(88, 88, 128, 0.15), rgba(56, 56, 88, 0.25));
+      border: 1px solid rgba(144, 119, 255, 0.2);
+      border-radius: 24px;
+      padding: 3rem 2rem;
+      cursor: pointer;
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+      position: relative;
+      overflow: hidden;
+      animation: slideUp 0.8s ease-out backwards;
+    }
+
+    .role-card:nth-child(1) {
+      animation-delay: 0.2s;
+    }
+
+    .role-card:nth-child(2) {
+      animation-delay: 0.3s;
+    }
+
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Student Card - Purple/Violet */
+    .role-card.student {
+      border-color: rgba(144, 119, 255, 0.3);
+    }
+
+    .role-card.student::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: radial-gradient(circle at top right, rgba(144, 119, 255, 0.15), transparent 70%);
+      opacity: 0;
+      transition: opacity 0.4s ease;
+    }
+
+    /* Guardian Card - Blue/Indigo */
+    .role-card.guardian {
+      border-color: rgba(94, 66, 223, 0.3);
+    }
+
+    .role-card.guardian::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: radial-gradient(circle at top right, rgba(94, 66, 223, 0.15), transparent 70%);
+      opacity: 0;
+      transition: opacity 0.4s ease;
+    }
+
+    .role-card:hover {
+      transform: scale(1.02) translateY(-4px);
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+      border-color: rgba(144, 119, 255, 0.5);
+    }
+
+    .role-card:hover::before {
+      opacity: 1;
+    }
+
+    .role-card:active {
+      transform: scale(0.98) translateY(0);
+      transition: all 0.15s ease;
+    }
+
+    /* Icon/Symbol */
+    .role-icon {
+      width: 64px;
+      height: 64px;
+      margin: 0 auto 1.5rem;
+      border-radius: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2rem;
+      position: relative;
+      z-index: 1;
+    }
+
+    .student .role-icon {
+      background: linear-gradient(135deg, var(--color-5), var(--shade-5));
+    }
+
+    .guardian .role-icon {
+      background: linear-gradient(135deg, var(--color-2), var(--shade-2));
+    }
+
+    /* Card Content */
+    .role-title {
+      font-size: 1.75rem;
+      font-weight: 500;
+      margin-bottom: 1rem;
+      color: #f5f5fa;
+      position: relative;
+      z-index: 1;
+    }
+
+    .role-description {
+      font-size: 0.95rem;
+      color: #b8b8cc;
+      line-height: 1.6;
+      position: relative;
+      z-index: 1;
+    }
+
+    /* Footer */
+    .footer {
+      margin-top: 3rem;
+      font-size: 0.85rem;
+      color: #8888a0;
+      line-height: 1.6;
+      animation: fadeIn 1.2s ease-out;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .product-name {
+        font-size: 2rem;
+      }
+
+      .role-cards {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+      }
+
+      .role-card {
+        padding: 2.5rem 1.5rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <!-- Header Section -->
+    <div class="header">
+      <h1 class="product-name">Expense Tracker</h1>
+      <p class="tagline">A clear view of student spending, built on trust.</p>
+    </div>
+
+    <!-- Role Selection Cards -->
+    <div class="role-cards">
+      <!-- Student Card -->
+      <div class="role-card student" onclick="selectRole('student')">
+        <div class="role-icon">
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+            <circle cx="12" cy="7" r="4"></circle>
+          </svg>
+        </div>
+        <h2 class="role-title">Student</h2>
+        <p class="role-description">Track and manage your expenses with full control over your spending records.</p>
+      </div>
+
+      <!-- Guardian Card -->
+      <div class="role-card guardian" onclick="selectRole('guardian')">
+        <div class="role-icon">
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+          </svg>
+        </div>
+        <h2 class="role-title">Parent / Guardian</h2>
+        <p class="role-description">View spending patterns and provide supportive guidance through trusted oversight.</p>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+      <p>Your privacy is respected. All information stays between you and your trusted circle.</p>
+    </div>
+  </div>
+
+  <script>
+    // Role selection handler - visual only, no real authentication
+    function selectRole(role) {
+      // Store role selection in memory for visual demonstration
+      sessionStorage.setItem('userRole', role);
+      
+      // Simulate navigation with smooth transition
+      document.body.style.opacity = '0';
+      document.body.style.transition = 'opacity 0.3s ease';
+      
+      setTimeout(() => {
+        // In a real app, this would navigate to main.html
+        // For demo purposes, we'll show an alert
+        alert(`Role selected: ${role}\n\nIn production, this would navigate to main.html`);
+        document.body.style.opacity = '1';
+      }, 300);
+    }
+  </script>
+</body>
+</html>
