--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         .blob {
             position: absolute;
             border-radius: 50%;
-            filter: blur(80px);
-            opacity: 0.3;
+            filter: blur(100px);
+            opacity: 0.15;
             animation: float 20s infinite ease-in-out;
             pointer-events: none;
         }
@@ -115,13 +115,6 @@
             text-align: center;
             margin-bottom: 0.5rem;
             letter-spacing: -2px;
-            text-shadow: 0 0 40px rgba(144, 119, 255, 0.5);
-            animation: glow 3s ease-in-out infinite;
-        }
-
-        @keyframes glow {
-            0%, 100% { filter: brightness(1); }
-            50% { filter: brightness(1.3); }
         }
 
         .subtitle {
@@ -179,8 +172,7 @@
         .role-card:hover {
             transform: translateY(-8px) scale(1.02);
             background: rgba(255, 255, 255, 0.06);
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5),
-                        0 0 40px var(--glow-color);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
         }
 
         .role-card:active {
@@ -208,8 +200,7 @@
             justify-content: center;
             font-size: 2.5rem;
             background: var(--card-color);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3),
-                        0 0 30px var(--glow-color);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
             transition: all 0.4s ease;
         }
 
