--- a/main.html
+++ b/main.html
@@ -503,19 +503,19 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="reports.html" class="nav-link">
                             <span class="nav-icon">📈</span>
                             Reports
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="categories.html" class="nav-link">
                             <span class="nav-icon">🏷️</span>
                             Categories
                         </a>
                     </li>
                     <li class="nav-item student-only">
-                        <a href="#" class="nav-link">
+                        <a href="goals.html" class="nav-link">
                             <span class="nav-icon">🎯</span>
                             Goals
                         </a>
